dark mode fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,17 +46,22 @@ header #switch{
     background-color: rgba(66, 211, 73, 0.5);
     color: green;
     font-weight: bold;
+    border-radius: 1000px;
 }
 .container-text input{
     background-color: rgba(201, 43, 43, 0.5);
     color: red;
     font-weight: bold;
+    border-radius: 1000px;
 }
 .container-text .text *{
     width: 49%;
     margin: 0;
     line-height: 24px;
     font-size: 18px;
+}
+#winner{
+    color: red;
 }
 h3{
     font-size: 32px;
@@ -74,7 +79,7 @@ h3{
     margin: 0;
     height: 300px;
     overflow-y: scroll; 
-    border: 1px solid black;
+    border: 1px solid grey;
     border-radius: 5px;
 }
 textarea{
@@ -151,8 +156,12 @@ body.dark {
     background-blend-mode: darken;
     background-size: cover;
 }
-   
-
+.dark{
+    background-color: #00000096;
+    color: white !important;
+    background-blend-mode: darken;
+    background-size: cover;
+}
 .switch {
     background: #343D5B;
     border-radius: 1000px;
@@ -197,3 +206,30 @@ body.dark {
     color: #fff;
 }
 
+/*Media queries*/
+@media screen and (max-width: 700px) {
+    section{
+        flex-direction: column;
+        align-items: center;
+    }
+    h1 *{
+        width: 90%;
+    }
+    .container-text{
+        padding-left: 13px;
+        margin-top: 10px;
+        width: 100%;
+        height: 200px;
+    }
+    .bag-main *{
+        margin: 0;
+        padding: 0;
+    }
+    #resultado{
+        margin-left: 13px;
+        width: 100%;
+    }
+    #switch{
+        margin-right: 100px;
+    }
+}
